--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "predev": "npm run clean",
     "dev": "parcel src/index.html -p 1234 --open",
-    "prebuild": "npm run clean",
-    "build": "parcel build src/index.html --out-dir ./dist --public-url . --detailed-report",
+    "prestart": "npm run clean",
+    "start": "parcel build src/index.html --out-dir ./dist --public-url . --detailed-report",
     "clean": "shx rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
