--- a/package.json
+++ b/package.json
@@ -1,41 +1,27 @@
 {
-  "name": "three.js-template",
+  "name": "corolla-webgl",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "predev": "npm run clean",
     "dev": "parcel src/index.html -p 3000 --open",
-    "start": "parcel build src/index.html --out-dir ./dist --public-url . --detailed-report",
+    "prebuild": "npm run clean",
+    "build": "parcel build src/index.html --out-dir ./dist --public-url . --detailed-report",
     "clean": "shx rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/brunosimon/three.js-template.git"
-  },
-  "author": "brunosimon",
+  "author": "hrahimi270",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/brunosimon/three.js-template/issues"
-  },
-  "homepage": "https://github.com/brunosimon/three.js-template#readme",
-  "devDependencies": {
-    "cannon": "^0.6.2",
-    "dat.gui": "^0.7.3",
-    "glslify-bundle": "^5.1.1",
-    "glslify-deps": "^1.3.1",
-    "gsap": "^2.1.3",
-    "howler": "^2.1.2",
+  "dependencies": {
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-asset-copier": "^1.0.0",
-    "parcel-plugin-static-files-copy": "^2.1.2",
+    "parcel-plugin-static-files-copy": "^2.2.1",
     "shx": "^0.3.2",
-    "three": "git+https://github.com/Samsy/threenext.git"
+    "three": "0.110.0"
   },
   "staticFiles": {
     "staticPath": "static",
     "watcherGlob": "**"
-  },
-  "dependencies": {}
+  }
 }
