--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "hrahimi270",
   "license": "MIT",
   "dependencies": {
+    "dat.gui": "^0.7.6",
+    "gsap": "^3.0.1",
+    "jquery": "^3.4.1",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-asset-copier": "^1.0.0",
     "parcel-plugin-static-files-copy": "^2.2.1",
